--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ target_link_libraries(clas-digital.o stdc++fs ${CMAKE_THREAD_LIBS_INIT})
 
 
 install(FILES src/clas-digital.service DESTINATION /etc/systemd/system)
+install(FILES bin/cert.pem bin/key.pem DESTINATION /etc/clas-digital/bin)
 install(FILES src/default DESTINATION /etc/nginx/sites-available)
 install(PROGRAMS bin/clas-digital.o DESTINATION /etc/clas-digital)
 install(DIRECTORY web DESTINATION /etc/clas-digital)
+install(CODE "execute_process(COMMAND systemctl daemon-reload COMMAND systemctl restart nginx COMMAND systemctl restart clas-digital)")
