--- a/src/clas-digital.service
+++ b/src/clas-digital.service
@@ -7,3 +7,6 @@ WantedBy=multi-user.target
 [Service]
 Type=simple
 ExecStart=/etc/clas-digital/clas-digital.o
+RemainAfterExit=no
+Restart=on-failure
+RestartSec=5s
