Improved the README to show exactly how to install the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ AUX_SOURCE_DIRECTORY(src/books/ SRC_FILES_BOOKS)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/bin)
 add_executable(clas-digital.o ${SRC_FILES})
-add_executable(books.o ${SRC_FILES_BOOKS})
+add_executable(books.o EXCLUDE_FROM_ALL ${SRC_FILES_BOOKS})
 target_link_libraries(clas-digital.o stdc++fs ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(books.o stdc++fs ${CMAKE_THREAD_LIBS_INIT})
 
