Set the service to automatic restart and set the working directory to the right value. added a debug file for easy debug output and easy printing at which function the error was generated. Changed the default setup of nginx for the right authentification added the user system from the old branch and added a basic initialiser if there is no user table present. Changed the main to rightly log in user and authorize requests to files. Added a url parser to parse xml-xhttp encoded post requests. Changed the Search and the guest_index in a way that they can easily login to the new server.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wpedantic -std=c++1z")
 
 find_package(Threads REQUIRED)
 
-set(SRC_FILES src/main.cpp)
+set(SRC_FILES src/main.cpp src/login/user.cpp src/login/usertable.cpp src/util/URLParser.cpp)
 AUX_SOURCE_DIRECTORY(src/books/ SRC_FILES_BOOKS)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/bin)
