Excluded all books from installing every time should be only a one time thing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,5 @@ install(FILES src/clas-digital.service DESTINATION /etc/systemd/system)
 install(FILES bin/cert.pem bin/key.pem DESTINATION /etc/clas-digital/bin)
 install(FILES src/default DESTINATION /etc/nginx/sites-available)
 install(PROGRAMS bin/clas-digital.o DESTINATION /etc/clas-digital)
-install(DIRECTORY web DESTINATION /etc/clas-digital)
+install(DIRECTORY web DESTINATION /etc/clas-digital PATTERN "web/books/*" EXCLUDE)
 install(CODE "execute_process(COMMAND systemctl daemon-reload COMMAND systemctl restart nginx COMMAND systemctl restart clas-digital)")
