Added private book protecting by nginx and added a way to load Search.html without asking the backend to do it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ install(FILES src/clas-digital.service DESTINATION /etc/systemd/system)
 install(FILES src/clas-digital-devel.service DESTINATION /etc/systemd/system)
 install(FILES bin/cert.pem bin/key.pem DESTINATION ${INSTALL_DIRS}/bin)
 install(FILES src/default DESTINATION /etc/nginx/sites-available)
+install(FILES bin/forbiddenfiles DESTINATION ${INSTALL_DIRS}/bin)
 install(PROGRAMS bin/clas-digital.o DESTINATION ${INSTALL_DIRS})
 install(DIRECTORY web DESTINATION ${INSTALL_DIRS} PATTERN "web/books/*" EXCLUDE)
 install(CODE "MESSAGE(\"Installing files done. Restarting nginx and the service ${SERVICE_TARGET}\")")
