--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,5 +42,6 @@ install(FILES src/default DESTINATION /etc/nginx/sites-available)
 install(FILES bin/forbiddenfiles DESTINATION ${INSTALL_DIRS}/bin)
 install(PROGRAMS bin/clas-digital.o DESTINATION ${INSTALL_DIRS})
 install(DIRECTORY web DESTINATION ${INSTALL_DIRS} PATTERN "web/books/*" EXCLUDE)
+install(DIRECTORY bin/trainingdata DESTINATION ${INSTALL_DIRS})
 install(CODE "MESSAGE(\"Installing files done. Restarting nginx and the service ${SERVICE_TARGET}\")")
 install(CODE "execute_process(COMMAND systemctl daemon-reload COMMAND systemctl restart nginx COMMAND systemctl restart ${SERVICE_TARGET})")
