Updated the README a bit to clean up the project a bit more

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/bin)
 add_executable(books.o EXCLUDE_FROM_ALL ${SRC_FILES_BOOKS} src/books/main.cpp)
 add_executable(clas-digital.o ${SRC_FILES} ${SRC_FILES_BOOKS})
 message("Libs: ${CONAN_LIBS}")  
-target_link_libraries(clas-digital.o stdc++fs m ${CONAN_LIBS})
-target_link_libraries(books.o stdc++fs m ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(clas-digital.o stdc++fs ${CONAN_LIBS})
+target_link_libraries(books.o stdc++fs ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 if(STABLE_INSTALL) 
 	message("Installing to the stable version!")
