--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Conan
       working-directory: ${{runner.workspace}}/build
       shell: bash
-      run: pip3 install conan && conan install ..
+      run: pip3 install setuptools && pip3 install conan && conan install ..
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
