Default profile was not created by conan install, should be installed by conan info though

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,6 +30,7 @@ jobs:
             pip3 install setuptools
             pip3 install conan
             export PATH=$PATH:/home/runner/.local/bin
+            conan info
             conan profile update settings.compiler.libcxx=libstdc++11 default
             conan install ${{runner.workspace}}
 
