--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,6 +27,7 @@ jobs:
             pip3 install setuptools
             pip3 install conan
             export PATH=$PATH:/home/runner/.local/bin
+            export CXX=g++-9
             conan config init
             conan profile update settings.compiler.libcxx=libstdc++11 default
             conan install ..
