--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ find_package(Threads REQUIRED)
 set(CMAKE_CXX_STANDARD 17)
 
 set(SRC_FILES_SEARCH src/search/book_manager/Book.cpp src/search/book_manager/Bookmanager.cpp src/search/search/Search.cpp src/search/search/SearchOptions.cpp src/search/main.cpp src/shared/metadata_handler.cc src/shared/util/func.cpp src/shared/util/fuzzy.cpp)
-set(SRC_FILES_SERVER src/shared/metadata_handler.cc
+
+add_library(clas_server_lib OBJECT src/shared/metadata_handler.cc
   src/shared/util/URLParser.cpp src/shared/util/ubuntu20matherror.cpp
   src/shared/util/func.cpp src/server/login/user.cpp
   src/server/login/usertable.cpp src/server/ocr/tesseract.cpp
@@ -23,8 +24,8 @@ set(SRC_FILES_SERVER src/shared/metadata_handler.cc
 set(SRC_FILES_SERVER_TEST src/server/test/main.cc
   src/server/zotero/tests/zotero.cc src/server/server/tests/server_test.cc)
 
-add_executable(clas_digital_server.o ${SRC_FILES_SERVER} src/server/main.cpp)
-add_executable(clas_digital_server_test.o ${SRC_FILES_SERVER}
+add_executable(clas_digital_server.o $<TARGET_OBJECTS:clas_server_lib> src/server/main.cpp)
+add_executable(clas_digital_server_test.o $<TARGET_OBJECTS:clas_server_lib>
   ${SRC_FILES_SERVER_TEST})
 
 
@@ -36,6 +37,11 @@ else()
   add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
+target_include_directories(clas_server_lib PUBLIC
+  "src/shared"
+  "src/shared/util"
+  "src/server"
+)
 
 target_include_directories(clas_digital_server.o PUBLIC
   "src/shared"
@@ -57,7 +63,7 @@ target_include_directories(clas_digital_search.o PUBLIC
 
 target_link_libraries(clas_digital_server.o ${CONAN_LIBS} stdc++)
 target_link_libraries(clas_digital_server_test.o ${CONAN_LIBS} stdc++)
-target_link_libraries(clas_digital_search.o)
+target_link_libraries(clas_digital_search.o stdc++)
 
 set(INSTALL_DIRS /etc/clas-digital-devel)
 set(SERVICE_TARGET clas-digital-devel)
