--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        cc: [gcc-9, clang-9]
+        cc: [clang-9]
     steps:
     - uses: actions/checkout@v2
 
