Trying to built missing packages in conan

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,13 +17,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        cc: [clang-9]
+        cc: [clang-9, gcc-9]
     steps:
     - uses: actions/checkout@v2
 
     - name: Install Conan
       shell: bash
       env:
+        CC: ${{ matrix.cc }}
         CXX: ${{ matrix.cc }}
       run:  |
             mkdir build
@@ -35,6 +36,7 @@ jobs:
     - name: Install Dependencies
       shell: bash
       env:
+        CC: ${{ matrix.cc }}
         CXX: ${{ matrix.cc }}
       run:  |
             cd build
@@ -47,6 +49,7 @@ jobs:
     - name: Build clas-digital on ${{ matrix.os }}
       shell: bash
       env:
+        CC: ${{ matrix.cc }}
         CXX: ${{ matrix.cc }}
       run:  |
             cd build
