Fixed some errors for windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ if(MSVC)
   add_compile_options(/W4 /WX)
 else()
   add_compile_options(-Wall -Wextra -pedantic -Werror)
+  link_libraries(stdc++)
 endif()
 
 target_include_directories(clas_server_lib PUBLIC
@@ -61,9 +62,9 @@ target_include_directories(clas_digital_search.o PUBLIC
   "src/search"
 )
 
-target_link_libraries(clas_digital_server.o ${CONAN_LIBS} stdc++)
-target_link_libraries(clas_digital_server_test.o ${CONAN_LIBS} stdc++)
-target_link_libraries(clas_digital_search.o stdc++)
+target_link_libraries(clas_digital_server.o ${CONAN_LIBS})
+target_link_libraries(clas_digital_server_test.o ${CONAN_LIBS})
+target_link_libraries(clas_digital_search.o)
 
 set(INSTALL_DIRS /etc/clas-digital-devel)
 set(SERVICE_TARGET clas-digital-devel)
