--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,7 +40,7 @@ jobs:
             cd build
             export PATH=$PATH:/home/runner/.local/bin
             conan config init
-            conan install .. --build=missing
+            conan install .. --build=missing -s compiler.libcxx=libstdc++11
 
     - name: Build clas-digital on ${{ matrix.os }}
       shell: bash
